--- a/Server/.env
+++ b/Server/.env
@@ -18,13 +18,13 @@ EMAIL_PORT=25
 
 EMAIL_FROM=amin@mail.io
 
-SENDGRID_USERNAME=apikey
-SENDGRID_PASSWORD=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
+# SENDGRID_USERNAME=apikey
+# SENDGRID_PASSWORD=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
 
-SENDGRID_RECOVERY=HP8NYK51KCA4UF92B4GRPEQD
+# SENDGRID_RECOVERY=HP8NYK51KCA4UF92B4GRPEQD
 
-STRIPE_SECRET_KEY=sk_test_iL5ZUfa6lae7nWHwv0a7MjNk00BpcyaGWr
+# STRIPE_SECRET_KEY=sk_test_iL5ZUfa6lae7nWHwv0a7MjNk00BpcyaGWr
 
-SESSION_SECRET_KEY=mlM&l43Lm*k45P^bjRck$dEs5Yry47sdc
+# SESSION_SECRET_KEY=mlM&l43Lm*k45P^bjRck$dEs5Yry47sdc
 
 
