--- a/Server/.env
+++ b/Server/.env
@@ -1,9 +1,10 @@
+NODE_ENV=production
 # NODE_ENV=development
-NODE_ENV=development
 PORT=3001
 USER=amin
-DATABASE=mongodb+srv://amin:<PASSWORD>@natourscluster.ze8boia.mongodb.net/games?retryWrites=true&w=majority
-DATABASE_PASSWORD=DSFKEeuifg3RweVQ
+# DATABASE=mongodb+srv://amin:<PASSWORD>@natourscluster.ze8boia.mongodb.net/games?retryWrites=true&w=majority
+DATABASE=mongodb://mongo:qnbvRNGjuoXyTadarCmbvsUdSEwZKCTl@interchange.proxy.rlwy.net:45012
+# DATABASE_PASSWORD=DSFKEeuifg3RweVQ
 
 MONGODB_URI=mongodb://localhost:27017/feed-the-kraken
 
