--- a/Server/.env
+++ b/Server/.env
@@ -8,6 +8,8 @@ DATABASE=mongodb://mongo:qnbvRNGjuoXyTadarCmbvsUdSEwZKCTl@interchange.proxy.rlwy
 
 MONGODB_URI=mongodb://localhost:27017/feed-the-kraken
 
+REDIS=redis://default:WNxvDrmiRVNYIytnbcxSCmDBUfqSqrAa@switchyard.proxy.rlwy.net:53134
+
 JWT_SECRET=a-secret-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
