--- a/Server/.env.production
+++ b/Server/.env.production
@@ -1,12 +1,7 @@
 NODE_ENV=production
-# NODE_ENV=development
 PORT=3001
-USER=amin
-# DATABASE=mongodb+srv://amin:<PASSWORD>@natourscluster.ze8boia.mongodb.net/games?retryWrites=true&w=majority
-DATABASE=mongodb://mongo:qnbvRNGjuoXyTadarCmbvsUdSEwZKCTl@interchange.proxy.rlwy.net:45012
-# DATABASE_PASSWORD=DSFKEeuifg3RweVQ
 
-MONGODB_URI=mongodb://localhost:27017/feed-the-kraken
+DATABASE=mongodb://mongo:qnbvRNGjuoXyTadarCmbvsUdSEwZKCTl@interchange.proxy.rlwy.net:45012
 
 REDIS=redis://default:WNxvDrmiRVNYIytnbcxSCmDBUfqSqrAa@switchyard.proxy.rlwy.net:53134
 
@@ -14,12 +9,12 @@ JWT_SECRET=a-secret-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_USERNAME=0e101f1452ae2f
-EMAIL_PASSWORD=3a996582675f12
-EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_PORT=25
+# EMAIL_USERNAME=0e101f1452ae2f
+# EMAIL_PASSWORD=3a996582675f12
+# EMAIL_HOST=sandbox.smtp.mailtrap.io
+# EMAIL_PORT=25
 
-EMAIL_FROM=amin@mail.io
+# EMAIL_FROM=amin@mail.io
 
 # SENDGRID_USERNAME=apikey
 # SENDGRID_PASSWORD=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
